--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@reduxjs/toolkit": "^2.2.7",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
@@ -30,7 +31,8 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.53.0",
-		"react-icons": "^5.3.0"
+		"react-icons": "^5.3.0",
+		"react-redux": "^9.1.2"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
