--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
+		"@nextui-org/avatar": "^2.0.33",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/date-picker": "^2.1.8",
+		"@nextui-org/dropdown": "^2.1.31",
 		"@nextui-org/input": "2.2.5",
 		"@nextui-org/kbd": "2.0.34",
 		"@nextui-org/link": "2.0.35",
