--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@hookform/resolvers": "^3.9.0",
 		"@nextui-org/avatar": "^2.0.33",
 		"@nextui-org/button": "2.0.38",
+		"@nextui-org/card": "^2.0.34",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/date-picker": "^2.1.8",
 		"@nextui-org/dropdown": "^2.1.31",
@@ -29,9 +30,12 @@
 		"@react-aria/visually-hidden": "3.8.12",
 		"@reduxjs/toolkit": "^2.2.7",
 		"clsx": "2.1.1",
+		"date-fns": "^4.1.0",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
+		"lightgallery": "^2.7.2",
+		"lucide-react": "^0.447.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
