--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
 		"@nextui-org/avatar": "^2.0.33",
+		"@nextui-org/badge": "^2.0.32",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/card": "^2.0.34",
 		"@nextui-org/chip": "^2.0.33",
