--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@nextui-org/badge": "^2.0.32",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/card": "^2.0.34",
+		"@nextui-org/checkbox": "^2.1.5",
 		"@nextui-org/chip": "^2.0.33",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/date-picker": "^2.1.8",
@@ -45,6 +46,7 @@
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.3.0",
+		"react-quill": "^2.0.0",
 		"react-redux": "^9.1.2",
 		"redux-persist": "^6.0.0",
 		"sonner": "^1.5.0",
