--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@reduxjs/toolkit": "^2.2.7",
+		"@tailwindcss/typography": "^0.5.15",
+		"axios": "^1.7.7",
 		"clsx": "2.1.1",
 		"date-fns": "^4.1.0",
 		"framer-motion": "~11.1.1",
