--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"react-icons": "^5.3.0",
 		"react-quill": "^2.0.0",
 		"react-redux": "^9.1.2",
+		"react-spinners": "^0.14.1",
 		"redux-persist": "^6.0.0",
 		"sonner": "^1.5.0",
 		"zod": "^3.23.8"
